# BioCleaning

./: .gitignore  pyproject.toml  textbio.txt  users.db
app/: app.py  db.py  users.py
static/css/: styles.css
static/js/: height-transition.js
templates/: base.html  base.jinja2  calc01.html  calc01.jinja2  index.html  index.jinja2  login.html  login.jinja2  muster.html  muster.jinja2  signup.html  signup.jinja2  snippets.html  snippets.jinja2  unauthanticated.jinja2
templates/partials/: forms-info-popover.html  forms-input-password.html  forms-input-password.jinja2  forms-input.jinja2  forms-select.html
